force-app/main/default/objects/SBQQ__Quote__c/fields/AdditionalConditions__c.field-meta.xml
<CustomField>
    <fullName>AdditionalConditions__c</fullName>
    <description>Condiciones adicionales que se mostrarán en el documento de la oferta.</description>
    <inlineHelpText>Condiciones adicionales que se mostrarán en el documento de la oferta.</inlineHelpText>
    <label>Condiciones Adicionales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>