force-app/main/default/objects/SBQQ__Quote__c/fields/ClientOpeningTime__c.field-meta.xml
<CustomField>
    <fullName>ClientOpeningTime__c</fullName>
    <label>Tiempo de apertura del cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>