force-app/main/default/objects/SBQQ__Quote__c/fields/ClientTank__c.field-meta.xml
<CustomField>
    <fullName>ClientTank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tanque Propio del Cliente</label>
    <type>Checkbox</type>
</CustomField>