force-app/main/default/objects/SBQQ__Quote__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <formula>TEXT (SBQQ__Opportunity2__r.County__c)</formula>
    <label>Provincia</label>
    <type>Text</type>
</CustomField>