force-app/main/default/objects/SBQQ__Quote__c/fields/DeliveryType__c.field-meta.xml
<CustomField>
    <fullName>DeliveryType__c</fullName>
    <label>Tipo de entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automática</fullName>
            </value>
            <value>
                <fullName>Bajo pedido</fullName>
            </value>
            <value>
                <fullName>Semi-automática</fullName>
                <isActive>false</isActive>
                <label>Semi-automática</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>