force-app/main/default/objects/SBQQ__Quote__c/fields/Dimension1__c.field-meta.xml
<CustomField>
    <fullName>Dimension1__c</fullName>
    <formula>TEXT (SBQQ__Opportunity2__r.Dimension1__c)</formula>
    <label>Dimensión 1</label>
    <type>Text</type>
</CustomField>