force-app/main/default/objects/SBQQ__Quote__c/fields/Dimension3__c.field-meta.xml
<CustomField>
    <fullName>Dimension3__c</fullName>
    <formula>TEXT (SBQQ__Opportunity2__r.Dimension3__c)</formula>
    <label>Dimensión 3</label>
    <type>Text</type>
</CustomField>