force-app/main/default/objects/SBQQ__Quote__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Duración Contrato (Años)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>