force-app/main/default/objects/SBQQ__Quote__c/fields/EstimatedConsumption__c.field-meta.xml
<CustomField>
    <fullName>EstimatedConsumption__c</fullName>
    <inlineHelpText>Consumo estimado anual</inlineHelpText>
    <label>Consumo anual estimado (KG)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>