force-app/main/default/objects/SBQQ__Quote__c/fields/FeeAmount__c.field-meta.xml
<CustomField>
    <fullName>FeeAmount__c</fullName>
    <label>Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>