force-app/main/default/objects/SBQQ__Quote__c/fields/FromConsumptionL__c.field-meta.xml
<CustomField>
    <fullName>FromConsumptionL__c</fullName>
    <label>Consumo desde L</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>