force-app/main/default/objects/SBQQ__Quote__c/fields/GasPriceRange__c.field-meta.xml
<CustomField>
    <fullName>GasPriceRange__c</fullName>
    <label>Margen de Gas</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>