force-app/main/default/objects/SBQQ__Quote__c/fields/HasStretches__c.field-meta.xml
<CustomField>
    <fullName>HasStretches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene tramos</label>
    <type>Checkbox</type>
</CustomField>