force-app/main/default/objects/SBQQ__Quote__c/fields/MinGasPriceRange__c.field-meta.xml
<CustomField>
    <fullName>MinGasPriceRange__c</fullName>
    <label>Margen de Gas Mínimo</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>