force-app/main/default/objects/SBQQ__Quote__c/fields/NonRecoveryInvestment__c.field-meta.xml
<CustomField>
    <fullName>NonRecoveryInvestment__c</fullName>
    <label>Inversión no recuperable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>