force-app/main/default/objects/SBQQ__Quote__c/fields/NStretches__c.field-meta.xml
<CustomField>
    <fullName>NStretches__c</fullName>
    <label>Número de tramos</label>
    <summaryForeignKey>Stretch__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>