force-app/main/default/objects/SBQQ__Quote__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRANSFER</fullName>
                <label>Transfer</label>
            </value>
            <value>
                <fullName>RECIBO</fullName>
                <label>Recibo</label>
            </value>
            <value>
                <fullName>ANTICIPAR</fullName>
            </value>
            <value>
                <fullName>Primafacil</fullName>
                <isActive>false</isActive>
                <label>Primafacil</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>