force-app/main/default/objects/SBQQ__Quote__c/fields/PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerm__c</fullName>
    <label>Plazo de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>005</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>30X30X30</fullName>
            </value>
            <value>
                <fullName>CANALIZADO</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>5X30X30</fullName>
            </value>
            <value>
                <fullName>20</fullName>
                <isActive>false</isActive>
                <label>20 Días</label>
            </value>
            <value>
                <fullName>20 días</fullName>
                <isActive>false</isActive>
                <label>20 días</label>
            </value>
            <value>
                <fullName>5 días</fullName>
                <isActive>false</isActive>
                <label>5 días</label>
            </value>
            <value>
                <fullName>Anticipado</fullName>
                <isActive>false</isActive>
                <label>Anticipado</label>
            </value>
            <value>
                <fullName>Otros días</fullName>
                <isActive>false</isActive>
                <label>Otros días</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>