force-app/main/default/objects/SBQQ__Quote__c/fields/PBA__c.field-meta.xml
<CustomField>
    <fullName>PBA__c</fullName>
    <label>PBA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>