force-app/main/default/objects/SBQQ__Quote__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Provincia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Coruña/La Coruña</fullName>
            </value>
            <value>
                <fullName>Alava/Araba</fullName>
            </value>
            <value>
                <fullName>Albacete</fullName>
            </value>
            <value>
                <fullName>Alicante</fullName>
            </value>
            <value>
                <fullName>Almería</fullName>
            </value>
            <value>
                <fullName>Asturias</fullName>
            </value>
            <value>
                <fullName>Avila</fullName>
            </value>
            <value>
                <fullName>Badajoz</fullName>
            </value>
            <value>
                <fullName>Barcelona</fullName>
            </value>
            <value>
                <fullName>Bizkaia/Vizcaya</fullName>
            </value>
            <value>
                <fullName>Burgos</fullName>
            </value>
            <value>
                <fullName>Cáceres</fullName>
            </value>
            <value>
                <fullName>Cádiz</fullName>
            </value>
            <value>
                <fullName>Cantabria</fullName>
            </value>
            <value>
                <fullName>Castellón</fullName>
            </value>
            <value>
                <fullName>Ciudad Real</fullName>
            </value>
            <value>
                <fullName>Córdoba</fullName>
            </value>
            <value>
                <fullName>Cuenca</fullName>
            </value>
            <value>
                <fullName>Gipuzkoa/Guipuzcoa</fullName>
            </value>
            <value>
                <fullName>Girona/Gerona</fullName>
            </value>
            <value>
                <fullName>Granada</fullName>
            </value>
            <value>
                <fullName>Guadalajara</fullName>
            </value>
            <value>
                <fullName>Huelva</fullName>
            </value>
            <value>
                <fullName>Huesca</fullName>
            </value>
            <value>
                <fullName>Jaén</fullName>
            </value>
            <value>
                <fullName>La Rioja</fullName>
            </value>
            <value>
                <fullName>León</fullName>
            </value>
            <value>
                <fullName>Lleida/Lérida</fullName>
            </value>
            <value>
                <fullName>Lugo</fullName>
            </value>
            <value>
                <fullName>Madrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>