force-app/main/default/objects/SBQQ__Quote__c/fields/SkipCreditApprovalCheck__c.field-meta.xml
<CustomField>
    <fullName>SkipCreditApprovalCheck__c</fullName>
    <formula>ISPICKVAL( PaymentTerm__c ,&apos;Anticipado&apos;) &amp;&amp;  NonRecoveryInvestment__c &lt;= 0</formula>
    <label>Ignorar Aprobación por Crédito</label>
    <type>Checkbox</type>
</CustomField>