force-app/main/default/objects/SBQQ__Quote__c/fields/TankCoordinates__c.field-meta.xml
<CustomField>
    <fullName>TankCoordinates__c</fullName>
    <label>Coordenadas del tanque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>