force-app/main/default/objects/SBQQ__Quote__c/fields/TankSize__c.field-meta.xml
<CustomField>
    <fullName>TankSize__c</fullName>
    <label>Tamaño del tanque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>