force-app/main/default/objects/SBQQ__Quote__c/fields/TankType__c.field-meta.xml
<CustomField>
    <fullName>TankType__c</fullName>
    <label>Tipo de tanque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aereo</fullName>
            </value>
            <value>
                <fullName>Enterrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>