force-app/main/default/objects/SBQQ__Quote__c/fields/TruckSize__c.field-meta.xml
<CustomField>
    <fullName>TruckSize__c</fullName>
    <label>Tamaño de camión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7 Tns</fullName>
            </value>
            <value>
                <fullName>11 Tns</fullName>
            </value>
            <value>
                <fullName>19 Tns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>